kubernetes/examples/load-balancers/domain-traefik.yaml
# Copyright 2019, Oracle Corporation and/or its affiliates.  All rights reserved.
# Licensed under the Universal Permissive License v 1.0 as shown at http://oss.oracle.com/licenses/upl.

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: domain1-uid-traefik
  namespace: sample-domain1-ns
  labels:
    weblogic.resourceVersion: domain-v2
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: 'domain1.org'
    http:
      paths:
      - path:
        backend:
          serviceName: 'domain1-uid-cluster-cluster-1'
          servicePort: 8001
